--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.0",
     "leaflet": "^1.8.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
