--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
     "leaflet": "^1.8.0",
     "vue": "^2.6.14",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
