--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.14.3",
     "axios": "^0.27.2",
     "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
