--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
     "leaflet": "^1.8.0",
+    "leaflet.smooth_marker_bouncing": "^3.0.0",
     "vue": "^2.6.14",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.5.1",
