--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.8.0",
     "leaflet.smooth_marker_bouncing": "^3.0.0",
     "vue": "^2.6.14",
