--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.27.2",
     "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
     "leaflet": "^1.8.0",
