--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
     "leaflet": "^1.8.0",
+    "leaflet.browser.print": "^2.0.2",
     "leaflet.smooth_marker_bouncing": "^3.0.0",
     "vue": "^2.6.14",
     "vue-chartjs": "^3.5.1",
