--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leaflet": "^1.8.0",
     "leaflet.browser.print": "^2.0.2",
     "leaflet.smooth_marker_bouncing": "^3.0.0",
+    "speech-synthesis": "^0.3.2",
     "vue": "^2.6.14",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.5.1",
