--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.6.14",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.5.1",
+    "vue-tour": "^2.0.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
